[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Center"]
margin_left = 342.0
margin_top = 242.0
margin_right = 682.0
margin_bottom = 358.0
custom_constants/separation = 100
alignment = 1

[node name="HostBox" type="VBoxContainer" parent="Center/HBox"]
margin_right = 120.0
margin_bottom = 116.0
rect_min_size = Vector2( 120, 0 )
custom_constants/separation = 5
alignment = 1

[node name="PortLabel" type="Label" parent="Center/HBox/HostBox"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 38.0
text = "Port:"

[node name="PortEdit" type="LineEdit" parent="Center/HBox/HostBox"]
margin_top = 43.0
margin_right = 120.0
margin_bottom = 67.0

[node name="HostButton" type="Button" parent="Center/HBox/HostBox"]
margin_top = 72.0
margin_right = 120.0
margin_bottom = 92.0
text = "Host!"

[node name="JoinBox" type="VBoxContainer" parent="Center/HBox"]
margin_left = 220.0
margin_right = 340.0
margin_bottom = 116.0
rect_min_size = Vector2( 120, 0 )
custom_constants/separation = 5
alignment = 1

[node name="AddressLabel" type="Label" parent="Center/HBox/JoinBox"]
margin_right = 120.0
margin_bottom = 14.0
text = "Address:"

[node name="AddressEdit" type="LineEdit" parent="Center/HBox/JoinBox"]
margin_top = 19.0
margin_right = 120.0
margin_bottom = 43.0

[node name="PortLabel" type="Label" parent="Center/HBox/JoinBox"]
margin_top = 48.0
margin_right = 120.0
margin_bottom = 62.0
text = "Port:"

[node name="PortEdit" type="LineEdit" parent="Center/HBox/JoinBox"]
margin_top = 67.0
margin_right = 120.0
margin_bottom = 91.0

[node name="JoinButton" type="Button" parent="Center/HBox/JoinBox"]
margin_top = 96.0
margin_right = 120.0
margin_bottom = 116.0
text = "Join!"
